Cuong incresed click area around item for nav menu and fixed bug spacing when hover - #23

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,8 +101,9 @@ h2 {
     margin-right: 70px;
 }
 
-.navbar .cta-menu .item {
-    margin-left: 42px;
+.navbar .cta-menu a {
+    
+    padding: 8px 21px;
 }
 
 .navbar .cta-menu a {
@@ -111,31 +112,26 @@ h2 {
     text-align: center;
     font-family: Poppins;
     font-size: 1.6rem;
-    font-style: normal;
     font-weight: 400;
     line-height: 1.75; /* 175% */
 }
 
+.navbar .cta-menu a:hover {
+    color: #171100;
+    text-shadow: 1px 0 0 currentColor;
+}
 .navbar .cta-menu a:hover::after {
     position: absolute;
     content:"";
     width: 12px;
     height: 2px;
     bottom: 0;
-    left: 0;
+    left: 21px;
     border-radius: 1px;
     background: #171100;
 }
 
-.navbar .cta-menu a:hover {
-    color: #171100;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 28px; /* 175% */
-}
+
 
 .navbar .cta-btn {
     display: flex;
